# InstaDesk-V2.0

./: .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: RELEASING.md
docs/manual/: README.md  build-manual.mjs  manual.en.html  manual.es.html
docs/manual/img/: README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.sandbox.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-agent.mjs  bump-version.mjs  make-latest-json.mjs  sandbox.mjs
src-tauri/src/: backend.rs  lib.rs  license.rs  main.rs
tools/: commit-push.ps1  rollback-last-commit.ps1  sanity.ps1  test.ps1
ui/: .env.example  index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: BottomControls.tsx  DisplayArray.tsx  LockedBanner.tsx  MonitorSelector.tsx  RightPane.bak_20250906_221506.tsx  RightPane.tsx  TopChrome.tsx  UpdateBanner.tsx  WorkspaceGrid.tsx
ui/src/components/common/: AddFavoriteModal.tsx  BrowseAppModal.tsx  BrowserPickerModal.tsx  ConfirmDialog.tsx  TruncateText.tsx
ui/src/components/layouts/: CaptureLayoutModal.tsx  EditLayoutDrawer.tsx  LayoutCard.tsx  LayoutPreviewOverlay.tsx  LayoutThumbnail.tsx  LayoutsPane.tsx
ui/src/components/quickpresets/: QuickPresetsManager.tsx
ui/src/components/settings/: SettingsPane.tsx
ui/src/i18n/: index.ts
ui/src/i18n/locales/: en.json  es.json
ui/src/services/: AppsHistoryService.ts  FavoritesService.ts  HiddenAppsService.ts  UrlGroupsService.ts  api.ts  appsCatalog.ts  clipboard.ts  hotkeys.ts  instanceIndex.ts  layoutBuilder.ts  layoutsIO.ts  pathNames.ts  storage.ts  telemetry.ts  updater.ts  version.ts
ui/src/state/: AppState.tsx  ThemeProvider.tsx
ui/src/types/: global-shims.d.ts
