[package]
name = "app"
version = "0.1.22"
description = "InstaDesk — multi-monitor launcher and layout tool"
authors = ["FCLX Studios"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["process", "time"] }
tempfile = "3"
futures = "0.3"
log = "0.4"
# Native file-open dialog (Browse-for-.exe in the browser picker). Cross-platform.
rfd = "0.15"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
# "Launch on system start" toggle — registers/unregisters the Windows startup
# (Run-key) entry. Driven from Rust via our own commands (no JS plugin / caps).
tauri-plugin-autostart = "2"
sentry = "0.36.0"
# Signed auto-updater + process restart (relaunch after applying an update).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2.3.2"

# Win32 foreground-window tracker (snap target selection). 0.61 matches Tauri's
# transitive windows dep, so no duplicate version is pulled.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi"] }
# Installed-browser detection (URL Builder picker) — reads StartMenuInternet.
winreg = "0.52"
